# RAG-Contenido-Runroom

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  manual_overrides.example.csv  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  OPERATIONS.md  THEME_INTEL_RELATED_AUDIT_TOPIC_41_20260318.md  YOUTUBE_API_AUDIT_SUBMISSION_ES.md
sql/: 001_init.sql  002_content_knowledge_layer.sql  003_add_runroom_lab_content_type.sql  004_supabase_security_hardening.sql  005_theme_intel.sql  006_theme_topic_source_documents.sql  007_theme_runs_default_limit_messages_100.sql  008_theme_intel_scheduler.sql  009_linkedin_draft_publisher.sql  010_linkedin_draft_publisher_debug.sql  011_linkedin_draft_scheduler.sql  012_enable_rls_for_theme_intel_and_linkedin_drafts.sql
src/: __init__.py  cli.py  config.py
tests/: test_api_contract.py  test_application_reranking.py  test_application_use_cases.py  test_case_study_markdown_parser.py  test_case_study_url_parser.py  test_chunking.py  test_cli_parser_regression.py  test_content_chunking.py  test_content_recommendation.py  test_content_taxonomy.py  test_episode_metadata.py  test_linkedin_draft_publisher_parsing.py  test_manual_episode_ingest.py  test_matching.py  test_newsletter_linkedin_generator.py  test_newsletter_linkedin_service.py  test_parser.py  test_runroom_lab_url_parser.py  test_runroom_labs_index.py  test_theme_intel_api.py  test_theme_intel_backfill.py  test_theme_intel_gmail.py  test_theme_intel_parsing.py  test_theme_intel_related_runtime.py  test_theme_intel_related_selection.py  test_theme_intel_run_debug.py  test_theme_intel_scheduler.py  test_title_sync.py  test_web_auth_flow.py  test_web_url_parser.py  test_youtube_description_qa.py  (+1 more)
(+186 files in other folders)
